--- a/.gitignore
+++ b/.gitignore
@@ -65,3 +65,4 @@
 /CSharpNotesForProfessionals/.vs/CSharpNotesForProfessionals/FileContentIndex/1a76cbb0-efe2-4b85-be91-f366e92c391f.vsidx
 /CSharpNotesForProfessionals/.vs/CSharpNotesForProfessionals/FileContentIndex/b81b5b87-7c50-40e1-b2f4-df68ccc9ea1c.vsidx
 /CSharpNotesForProfessionals/.vs/CSharpNotesForProfessionals/FileContentIndex/b916efe2-33c7-47d4-b7f3-e544c0a4359d.vsidx
+/CSharpNotesForProfessionals/.vs/CSharpNotesForProfessionals/DesignTimeBuild/.dtbcache.v2
