--- a/.gitignore
+++ b/.gitignore
@@ -66,3 +66,5 @@
 /CSharpNotesForProfessionals/.vs/CSharpNotesForProfessionals/FileContentIndex/b81b5b87-7c50-40e1-b2f4-df68ccc9ea1c.vsidx
 /CSharpNotesForProfessionals/.vs/CSharpNotesForProfessionals/FileContentIndex/b916efe2-33c7-47d4-b7f3-e544c0a4359d.vsidx
 /CSharpNotesForProfessionals/.vs/CSharpNotesForProfessionals/DesignTimeBuild/.dtbcache.v2
+/CSharpNotesForProfessionals/Chapter 39 Constructors and Finalizers/bin/Debug/net8.0
+/CSharpNotesForProfessionals/Chapter 39 Constructors and Finalizers/obj
